# cuda_graph_benchmark

./: README.md  build.sh
benchmarks/: CMakeLists.txt
benchmarks/baseline/: baseline.cc  baseline.cu  baseline.cuh
benchmarks/bm_lib/: CMakeLists.txt  shared_kernel.cu  shared_kernel.h  utils.cc
benchmarks/cuda_graph/: cuda_graph.cc  cuda_graph.cu  cuda_graph.cuh
benchmarks/out_sync/: out_sync.cc  out_sync.cu  out_sync.cuh
script/: plot.py
